# p-vector-rs

./: Cargo.toml  README.md  about.hbs  about.toml  config.toml  sqlx-data.json
.sqlx/: query-022d8f37a48f5c7eedbd8ab61797783a23fffd47c7577569e8637cf30014217b.json  query-073f3f1909662171806e38ca91d9eb6bdcfdff5067b2a4c5a2e56431a9236422.json  query-0a4540e8c33c71222a68ff5ecc1a167b406de9961ac3cc69649c6152a6d7a9b7.json  query-0b2e0a7ba7c400b0951547abf0a0947cd6f51af57f38f4c91d0c1a047843c13e.json  query-0e7e68b02487eb2c6c6c9c5231b40abfd7040a7bb21ff4e6f0d9a57054967356.json  query-0f537251d9bb699a041a4c033a7ce6badaf5be1141d98fc4214928ceca1cad9b.json  query-11ae23f34abba3c0801afd3e13dc51c484999b32cb73ee182ffe0f337760ef96.json  query-14f2c90ff3bf00e1485a658f47da843912e4e0a5b6ea394dbc1d9910d24304d6.json  query-168780a2e264b9db2df51df0f013fef794314aa08fe9b3d51bddfde94e3f1614.json  query-18d29fe563ec67524079ef25d7df21e2242ea20be7de6b2fc2694e0e1cef9487.json  query-2051c45ee7ed568539a63718c6d972a0a21a011e511474fcd82c50744ace65ab.json  query-2692dbee1ae39df1cf53035ce1a107482838d3b0abe63226afd4770411e77de2.json  query-28a25034416a5a4760f7ba8e747804575735180de9f28675a0019bc038a77e18.json  query-3eebbb9c5f04bcea5ebd279fda2408ce9a222a34e1701d23e8fbd1b539b10388.json  query-498614e7fff26771770881269677d8e162807687b7587ecdadc928f9936f9a9c.json  query-49c275e9b638725d0832e6f4910ed6751f36c57c3d512a9c6e2afe9370045f29.json  query-511a72ec01f963731335853098b793e4e99e7f2f4a3f6e5400de60edf0c473f9.json  query-5be45eaa9f9e17923a9138c54775533dd65c257985dc51eb93ac07fdd7de7ffc.json  query-61205a1b290fdc2ae1674599d34bd08a5eda1299c3dffcb98048186ddf75b391.json  query-69736f1707dcf79d927f9693f8dd407da53aa7e5e966ab0468d97c8493dd26fb.json  query-75bb672bb0ab07c530cb3349355e5d9f833c355c38e88af13f3294b16973ee21.json  query-7c18bf09ef1a28ee8c8b3e88f412b01009217f076e3db4743a733e4b3ec97aab.json  query-9b9bcc3b7774054f8b20396d60e3bbcba51d0c2e840753f6484b01d3d83f3e21.json  query-9cdf72bc03a76f14e254a00f9feb1d9e35c117d661eb4a73e1d9255b3035d514.json  query-a0103693f0c8c64b2c302c4b0a62d95841862349121b59f19192f91c4d8ccd1f.json  query-ae2cc8545e9573723d82b81257d8b3cb9d2832d0e125c8abc63dfcb44016737e.json  query-bd5a59a50ebc236dc2d771656ea909e4443e58ee705ba0ba5540d5e7f66a104f.json  query-be19365bd1bf5ce5fdd408c058e456624b10c3a0127fd78b86b02698dca1b33c.json  query-d58b538efe399819f42a129d3c8d811e3fc42231ecabd767a5b6170657a18fb9.json  query-d79207c702e2c9bc381315c82dc64fe88d990a76b0712d21a46e105cf51b4293.json  query-dbd040325179468fabda02c9848c23c734d6d83062cebaaf25de204aca269dd7.json  query-dc68a6e45d42d0507ec99f0261df65ade57ce037424b85f3fd5187679c89d447.json  query-dc7b3f0b1089cd6d4fce903268ec555966e7dd38ae96b47a2a990c3ad24bea4b.json  query-df2c87c4b164ac2fd7947d63c9b19319b279d33ca8a4ca05e827fc7558ad7059.json  query-f03d9d07b65fc435aec9c1e86f09d8b4d51bf6a91f405cf02031c9ea40d23659.json  query-f23fc9018d9c89f3cba953da183c703fac30d94188194050ed1042752abfad81.json  query-f30649efca05dc2d57907e5290ba990f191d5e69c17edf979b3f471f7110f01d.json  query-f5f1aba07303e12cd1f7ca30ba425a8a6f285d3bc7fd1ee6872e52691bfb50ce.json  query-f81757b4a592e24d5dec87163b83a4a5d4dfc225b9bdb007685e03212ffcc404.json  query-fc181f0d3bf1965fc11538f0eeda015fb85a9838d88c32956edba1e2d7ab7e9b.json
docs/: database.md  setup-guide.md
migrations/: 20210621205247_abbsdb-base.down.sql  20210621205250_vercomp.down.sql  20210621205250_vercomp.up.sql  20210621205620_pv-base.down.sql  20210621205620_pv-base.up.sql  20210720054426_simplify.down.sql  20210720054426_simplify.up.sql  20210812091323_more_strict_schema.down.sql  20210812091323_more_strict_schema.up.sql  20211219041531_fix_so_file_records.down.sql  20211219041531_fix_so_file_records.up.sql  20230319220117_normalize_pv_files.down.sql  20230319220117_normalize_pv_files.up.sql  20230727020133_view_for_latest_outdated_packages.down.sql  20230727020133_view_for_latest_outdated_packages.up.sql  20241012032357_add-x-aosc-features-field.down.sql  20241012032357_add-x-aosc-features-field.up.sql
sql/: README.md  gen_pvsync.py  pkgissues.sql  pvsync.sql
src/: cli.rs  config.rs  db.rs  gc.rs  generate.rs  ipc.rs  main.rs  parser.rs  sign.rs  sync.rs
src/scan/: dbscan.rs  mod.rs
templates/: InRelease.stpl  Packages.stpl  gen-key-instructions.stpl
tests/fixtures/: a2jmidid_9-0_amd64.deb  aosc-aaa_11.6.0-1~pre20241017T062346Z_amd64.deb
