[package]
name = "p-vector"
version = "0.3.3-alpha.0"
license = "LGPL-3.0-or-later"
authors = ["liushuyu <liushuyu011@gmail.com>"]
edition = "2018"
resolver = "2"

[dependencies]
# logging facilities
log = "0.4"
env_logger = "0.9"
# scanning facilities
walkdir = "2.3"
ar = "0.9"
tar = "0.4"
xz2 = "0.1"
flate2 = "1.0"
# utilities
anyhow = "1.0"
sha2 = "0.10"
rayon = "1.5"
sailfish = "0.5"
faster-hex = "0.6"
crossbeam-queue = "0.3"
tempfile = "3.2"
fs_extra = "^1"
time = { version = "0.3", default-features = false, features = ["serde-human-readable", "macros"] }
secrecy = "0.8"
sequoia-openpgp = { version = "1.3", features = ["crypto-nettle"], default-features = false }
memmap2 = "0.5"
sequoia-ipc = "0.28"
# parser implementations
nom = "^7"
toml = "0.5"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
goblin = "0.6"
bincode = "^1"
zmq = "0.9"
# cli
argh = "0.1"
dialoguer = "0.10"
# async and database
tokio = { version = "^1", features = ["rt", "rt-multi-thread", "time", "macros", "fs"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "macros", "postgres", "chrono", "migrate", "json", "offline"] }
futures = "0.3"
async-compression = { version = "0.3", features = ["tokio", "gzip", "xz"] }
reqwest = "0.11"

[target.'cfg(unix)'.dependencies]
nix = "0.25"
sd-notify = { version = "0.4", optional = true }

[features]
default = ["systemd"]
systemd = ["sd-notify"]

[profile.release]
lto = true
